# konfigurator

./: Cargo.toml
src/: error.rs  formatter.rs  interface.rs  lib.rs  main.rs  model.rs  utils.rs
src/cli/: actions.rs  mod.rs
src/model/: mod.rs
xml/: Konfigurator.xml
xsd/: Konfigurator.xsd
